testdata/baselines/reference/submodule/conformance/privateNameBadAssignment.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameBadAssignment.ts(1,1): error TS2304: Cannot find name 'exports'.
privateNameBadAssignment.ts(1,9): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadAssignment.ts(3,3): error TS2339: Property 'prototype' does not exist on type '() => void'.
privateNameBadAssignment.ts(3,13): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadAssignment.ts(6,3): error TS2339: Property '#foo' does not exist on type '{ new(): B; prototype: B; }'.
privateNameBadAssignment.ts(11,9): error TS2304: Cannot find name 'exports'.
privateNameBadAssignment.ts(12,14): error TS2339: Property '#foo' does not exist on type 'C'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameBadAssignment.ts (7 errors) ====
    exports.#nope = 1;           // Error (outside class body)
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
            ~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    function A() { }
    A.prototype.#no = 2;         // Error (outside class body)
      ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '() => void'.
                ~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    
    class B {}
    B.#foo = 3;                  // Error (outside class body)
      ~~~~
!!! error TS2339: Property '#foo' does not exist on type '{ new(): B; prototype: B; }'.
    
    class C {
        #bar = 6;
        constructor () {
            exports.#bar = 6;    // Error
            ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
            this.#foo = 3;       // Error (undeclared)
                 ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'C'.
        }
    }
    